<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/go_image_thumbs"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical" >
		<TextView
			android:id="@+id/go_files_header"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold"
			android:text="@string/go_files" />
		<View
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:background="@color/holor_blue_light"
			android:visibility="visible" />

		<GridView
			android:id="@+id/go_thumb_grid"
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="@dimen/widget_vertical_margin"
			android:layout_marginTop="@dimen/widget_vertical_margin"
			android:gravity="top|center_horizontal"
			android:numColumns="5"
			android:scrollbars="vertical" >

		</GridView>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/go_dest_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<TextView
			android:id="@+id/go_dest_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right|center_vertical"
			android:text="@string/go_dest_dir"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold" />
		<Spinner
			android:id="@+id/go_albums_spinner"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

	<LinearLayout
		style="?android:attr/buttonBarStyle"
		android:id="@+id/go_action_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/widget_vertical_margin" >

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/go_action_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/go_action_cancel" />

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:id="@+id/go_action_move"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/go_action_move" />

	</LinearLayout>

</LinearLayout>
<!-- vim: set ts=4 sw=4: -->
